crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_infer_basic.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.unbound_name

  × nome `repr` não está no escopo
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_infer_basic.kata:6:11]
 5 │     let result := f 5
 6 │     echo!(repr result)
   ·           ──┬─
   ·             ╰── nome não vinculado
   ╰────
  help: você quis dizer `read`?
