crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_is_prime.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
parse.unexpected_token

  × token inesperado: esperado ``=` tem aridade padrão 2 — excesso de
  │ argumentos posicionais. Use `={...}` para aridade diferente ou separe com
  │ quebra de linha.`, encontrado `(`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_is_prime.kata:2:20]
 1 │ check_divisor :: Int Result::(NonZero, Error) => Bool
 2 │ lambda x Ok(y_nz): = 0 $(mod x y_nz)
   ·                    ───┬──
   ·                       ╰── token inesperado
 3 │ lambda x Err(e): False
   ╰────

parse.unexpected_token

  × token inesperado: esperado ``check_divisor` tem aridade padrão 2 — excesso
  │ de argumentos posicionais. Use `check_divisor{...}` para aridade diferente
  │ ou separe com quebra de linha.`, encontrado `(`
    ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_is_prime.kata:13:22]
 12 │    with
 13 │        eh_divisor := check_divisor x $(NonZero y)
    ·                      ─────────┬────────
    ·                               ╰── token inesperado
 14 │        passou_limite := > y sx
    ╰────

parse.unexpected_token

  × token inesperado: esperado `expression`, encontrado `<DEDENT>`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_is_prime.kata:1:1]
 1 │ check_divisor :: Int Result::(NonZero, Error) => Bool
   · ▲
   · ╰── token inesperado
 2 │ lambda x Ok(y_nz): = 0 $(mod x y_nz)
   ╰────

Error:   × 3 erro(s) encontrado(s)
