crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_iterable.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
[resolution] warning: interface 'ITERATOR' não declarada (em implements para CustomIter) — pode ser um typo ou falta de import
[resolution] warning: interface 'ITERATOR' não declarada (em implements para CustomIter) — pode ser um typo ou falta de import
Error: type.mismatch

  × tipo incompatível: esperado `Optional`, encontrado `Optional::(T)`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_iterable.kata:8:15]
 7 │     next :: CustomIter => Optional
 8 │     lambda i: None
   ·               ──┬─
   ·                 ╰── tipos incompatíveis
 9 │ 
   ╰────
