crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_lambda_expr.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.mismatch

  × tipo incompatível: esperado `Tuple`, encontrado `Ident { name:
  │ "resultado" }`
