crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_lazy_identity.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
[resolution] warning: `read` tem overloads com aridades diferentes (1 vs 2) — aridade padrão = 1 (primeira declaração)
[resolution] warning: `read` tem overloads com aridades diferentes (1 vs 2) — aridade padrão = 1 (primeira declaração)
Error: type.lambda_inference_fail

  × não foi possível inferir os tipos dos parâmetros do lambda — forneça uma
  │ anotação de tipo (ex: ::(Int -> Int))
