crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_map_capture.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``(``, encontrado `result`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_map_capture.kata:5:11]
 4 │     let result := map (lambda x: + x n) dados
 5 │     echo! result
   ·           ───┬──
   ·              ╰── token inesperado
   ╰────
