crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_map_nocap_echo.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``(``, encontrado `result`
