crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_map_toplevel.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
parse.unexpected_token

  × token inesperado: esperado `argumento #2 para `map` (aridade padrão 2)`,
  │ encontrado `<STMT_SEP>`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_map_toplevel.kata:1:1]
 1 │ # Testa map simple sem captures nem parenteses
   · ▲
   · ╰── token inesperado
 2 │ f :: Int => Int
   ╰────

parse.unexpected_token

  × token inesperado: esperado `expression`, encontrado `<DEDENT>`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_map_toplevel.kata:1:1]
 1 │ # Testa map simple sem captures nem parenteses
   · ▲
   · ╰── token inesperado
 2 │ f :: Int => Int
   ╰────

Error:   × 2 erro(s) encontrado(s)
